--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "peerDependencies": {
     "vue": "^3.4.0",
     "vuetify": "^3.0.0",
-    "material-design-icons-iconfont": "^6.7.0"
+    "material-design-icons-iconfont": "^6.7.0",
+    "idb": "^8.0.3"
   },
   "devDependencies": {
+    "@types/google.accounts": "^0.0.17",
     "@vitejs/plugin-vue": "^4.2.3",
     "rimraf": "^6.0.1",
     "vite": "^4.3.9",
