--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "rimraf dist && vue-tsc && vite build"
   },
   "peerDependencies": {
+    "sortablejs": "^1.15.6",
     "vue": "^3.4.0",
     "vuetify": "^3.0.0",
     "material-design-icons-iconfont": "^6.7.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/google.accounts": "^0.0.17",
+    "@types/sortablejs": "^1.15.8",
     "@vitejs/plugin-vue": "^4.2.3",
     "rimraf": "^6.0.1",
     "vite": "^4.3.9",
