--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vuetify": "^3.0.0"
   },
   "devDependencies": {
+    "@vueuse/core": "^13.1.0",
     "@types/google.accounts": "^0.0.17",
     "@types/sortablejs": "^1.15.8",
     "@vitejs/plugin-vue": "^5.2.3",
