--- a/demo/package.json
+++ b/demo/package.json
@@ -6,7 +6,8 @@
     "src"
   ],
   "scripts": {
-    "dev": "vite --host"
+    "dev": "vite --host",
+    "deploy": "vite build && node deploy.js"
   },
   "dependencies": {
     "idb": "^8.0.3",
@@ -19,6 +20,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "@vueuse/core": "^13.1.0",
+    "gh-pages": "^6.3.0",
+    "git-rev-sync": "^3.0.2",
     "rimraf": "^6.0.1",
     "vite": "^6.2.4"
   }
