--- a/demo/package.json
+++ b/demo/package.json
@@ -6,15 +6,15 @@
     "src"
   ],
   "scripts": {
-    "dev": "vite --host",
+    "demo": "vite --host",
     "deploy": "vite build && node deploy.js"
   },
   "dependencies": {
+    "vue-f-misc": "link:..",
     "idb": "^8.0.3",
     "material-design-icons-iconfont": "^6.7.0",
     "sortablejs": "^1.15.6",
     "vue": "^3.4.0",
-    "vue-f-misc": "link:..",
     "vuetify": "^3.0.0"
   },
   "devDependencies": {
